--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<!-- caracteres latinos ya no pones acutes -->
 	<meta charset="UTF-8">
 	<title>Primer página HTML 5</title>
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 	<header>
