--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<header>
+	<img src="img/logo.png" alt="">
 		<h1>Mi aplicaición</h1>
 		<nav>
 			<ul>
@@ -21,7 +22,7 @@
 		</nav>
 	</header>
 	<main>
-	<section>
+	<section id="seccion1">
 		<article>
 			<h2>Artículo de Lorem ipsum</h2>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur saepe omnis magnam animi esse perspiciatis, ipsam sunt ad incidunt. Iste quis amet rerum fuga laborum odio nisi eos quia culpa.
