--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
 		</article>
 	</section>
 	<section>
+		<article>
+			HTML5
+			<form action="" method="">
+				Escribe algo aquí: <br>
+				<input type="text" required placeholder="Escribe aquí" size=16 maxlength=8 autofocus> <br>
+				<input type="number" required value =0 max =10 min=0> <br>
+				<input type="password" required value="Algo" placeholder="Escribe aquí" size=16 maxlength=8> <br>
+				<input type="date" value="2016-03-06"> <br>
+				<input type="email" required> <br>
+				<input type="radio" name="genero" value="F"> Femenino <br>
+				<input type="radio" name="genero" value="M"> Masculino <br>
+				<input type="radio" name="genero" value="O"> otros <br>
+					<select name="genero2" id="">
+						<option value="">Femenino</option>
+						<option value="">Masculino</option>
+						<option value="">Otros</option>
+					</select>
+
+
+				<input type="submit"required> <br>
+			</form>
+		</article>
+	</section>
+	<section>
 		No es obligatorio poner artículos dentro de secciones.
 	</section>
 	<section>
