--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
 	<!-- caracteres latinos ya no pones acutes -->
 	<meta charset="UTF-8">
 	<title>Primer página HTML 5</title>
+	<link href='https://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>	
+
+	<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/estilos.css">
+
 </head>
 <body>
 	<header>
 	<img src="img/logo.png" alt="">
-		<h1>Mi aplicaición</h1>
+		<h1>
+			<span class ="icon-pacman">
+			Mi aplicación
+			</span>
+			
+		</h1>
 		<nav>
 			<ul>
 				<li>Opciones 1</li>
@@ -31,7 +45,7 @@
 			Otro artículo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic ullam a illum nihil iste facilis fugiat, possimus beatae, laudantium, commodi, autem nisi eum adipisci deserunt rem dolorem quasi temporibus error.
 		</article>
 	</section>
-	<section>
+	<section id="seccion2">
 		<article>
 			HTML5
 			<form action="" method="">
@@ -55,10 +69,10 @@
 			</form>
 		</article>
 	</section>
-	<section>
+	<section id="seccion3">
 		No es obligatorio poner artículos dentro de secciones.
 	</section>
-	<section>
+	<section id="seccion4">
 		<section>NOTA: No poner secciones dentro de secciones porque no.</section>
 	</section>
 	Texto libre, si. Más deben de usarlo en pocas ocasiones.
