Header casi terminado e imagen slide terminada

--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -13,19 +13,25 @@
 		<!-- si en vez de id es "class"es que a mas de un elemento se le aplica el estilo -->
 		<!-- nav>ul>li*6 -->
 		<nav>
-			<ul>
-				<li>Inicio</li>
-				<li>Sección</li>
-				<li>Sección</li>
-				<li>Sección</li>
-				<li>Sección</li>
-				<li>Sección</li>
-			</ul>
-		</nav>
+		<ul>
+			<li>Inicio</li>
+			<li>Sección</li>
+			<li>Sección</li>
+			<li>Sección</li>
+			<li>Sección</li>
+			<li>Sección</li>
+		</ul>
+	</nav>
 		<form action="">
-			<input type="search">
+			<input type="search" placeholder ="Buscar aquí...">
 			<input type="button" value= "Buscar">
 		</form>
 	</header>
+	<section id="Seccion01">
+		<article>
+			<img src="img/slide2.jpg" alt="Slide Principal">
+		</article>
+	</section>
+	
 </body>
 </html>
