--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -32,6 +32,43 @@
 			<img src="img/slide2.jpg" alt="Slide Principal">
 		</article>
 	</section>
+	<section id="Seccion02">
+		<article>
+			<img src="img/separador.jpg" alt="">
+			<br>
+			<span class ="unaSeccion">Una sección</span>
+			<br>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime et, illum voluptate recusandae dolor perspiciatis necessitatibus omnis provident tempora dignissimos, tenetur sequi eligendi minima modi facilis quam, sunt aut, quis.
+			<br>
+			<p>
+				<input type="submit" value="Ver más">
+				<!-- también le puedes poner "button" o <button></button> -->
+			</p>
+		</article>
+			
+		<article>
+			<img src="img/separador.jpg" alt="">
+			<br>
+			<span class="otraSeccion">Otra Sección</span>
+			<br>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime et, illum voluptate recusandae dolor perspiciatis necessitatibus omnis provident tempora dignissimos, tenetur sequi eligendi minima modi facilis quam, sunt aut, quis.
+			<br>
+			<br>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime et, illum voluptate recusandae dolor perspiciatis necessitatibus omnis provident tempora dignissimos.
+			<p>
+				<input type="submit" value="Ver más">
+				<!-- también le puedes poner "button" o <button></button> -->
+			</p>
+		</article>
+
+		<article>
+			<img src="img/separador.jpg" alt="">
+			<span class="otraSeccion">Un vídeo</span>
+			<br>
+			<img src="img/video.jpg" alt="">
+
+		</article>
+	</section>
 	
 </body>
 </html>
