--- a/practicapwCss/index.html
+++ b/practicapwCss/index.html
@@ -36,9 +36,9 @@
 		<article id="article0102">
 			<span class="naranja">Publicidad</span>
 			<br>
-			<div>
-				<img src="img/publicidad.jpg" alt="">
-				<img src="img/publicidad.jpg" alt="">
+			<div class="div">
+				<img src="img/publicidad.jpg" alt="" id="imgdiv1">
+				<img src="img/publicidad.jpg" alt=""id="imgdiv2">
 				<br>				
 				<img src="img/publicidad.jpg" alt="">
 				<img src="img/publicidad.jpg" alt="">	
@@ -52,32 +52,37 @@
 		<article id="article0202">
 			<span class="porAdmin">Por Admin El 30/05/2012. En Pruebas</span>
 				<br>
-				<p>
+				<p id="texto">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat praesentium accusantium nostrum alias, repellat, delectus esse atque blanditiis quia ipsam quas vitae asperiores quis aspernatur velit ex totam pariatur natus.
 				</p>
 				<p>
-					<input type="submit" value="Leer Mas..">
+					<input id="botonLeerMas" type="submit" value="Leer Mas..">
 				</p>
 			</article>
 		
 		<article id="article0203">
 			<span class="naranja">Buscador</span>
 			<br>
-			<input type="text" value="Search...">
-			<input type="button" value="Go">
+			<div class="div2">
+				<input class="input1"type="text" value="Search...">
+				<input class="input1"type="button" value="Go">
+			</div>
 				<br>
 				<span class="naranja">Categorias</span>
-			<nav>
-				<ul>
-					<li>categoria 1</li>
-					<li>categoria 2</li>
-					<li>categoria 3</li>
-					<li>categoria 4</li>
-					<li>categoria 5</li>
-					<li>categoria 6</li>
-					<li>categoria 7</li>
-				</ul>
-			</nav>
+				<div class=div3>
+					<nav>
+						<ul>
+							<li>categoria 1</li>
+							<li>categoria 2</li>
+							<li>categoria 3</li>
+							<li>categoria 4</li>
+							<li>categoria 5</li>
+							<li>categoria 6</li>
+							<li>categoria 7</li>
+						</ul>
+					</nav>
+				</div>
+			
 		</article>
 	</section>
 	<section id="tercerSeccion">
