--- a/JavaScript/js01.html
+++ b/JavaScript/js01.html
@@ -4,15 +4,17 @@
 	<meta charset="UTF-8">
 	<title>Primer JS</title>
 	<link rel="stylesheet" href="">
-	<script>
-		var nombre = "Karen"
-		window.document.write("<strong>JS en acción</strong>"+" "+nombre);
-		alert("Mensaje por pantalla")
-	</script>
+	<script src="js/codigo.js"></script>
 
 </head>
 <body>
-	No JS, no hay acción
+	No JS, no hay acción <br>
+	<button onClick="alert('Me diste click:$');">
+		Presióname
+	</button>
+	<button onClick="botonClic();">
+		Presióname 2 :)
+	</button>
 
 </body>
 </html>
