--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Calculadora Básica</title>
 	<link rel="stylesheet" href="css/estilos.css">
+	<script src="js/calculadora.js"></script>
 </head>
 <body>
 	<h1>Calculadora Básica</h1>
@@ -25,28 +26,28 @@
 			</td>
 		</tr>
 		<tr> 
-			<td><input type="button" value="7"></td>
-			<td><input type="button" value="8"></td>
-			<td><input type="button" value="9"></td>
-			<td><input type="button" value="+"></td>
+			<td><input type="button" value="7" onclick="numeros('7');"></td>
+			<td><input type="button" value="8" onclick="numeros(this.value);"></td>
+			<td><input type="button" value="9" onClick="numeros(this.value);"></td>
+			<td><input type="button" value="+" onclick="operadores(this.value)"></td>
 		</tr>
 		<tr>
-			<td><input type="button" value="4"></td>
-			<td><input type="button" value="5"></td>
-			<td><input type="button" value="6"></td>
-			<td><input type="button" value="-"></td>
+			<td><input type="button" value="4" onClick="numeros(this.value);"></td>
+			<td><input type="button" value="5" onClick="numeros(this.value);"></td>
+			<td><input type="button" value="6" onClick="numeros(this.value);"></td>
+			<td><input type="button" value="-" onclick="operadores(this.value)"></td>
 		</tr>
 		<tr>
-			<td><input type="button" value="1"></td>
-			<td><input type="button" value="2"></td>
-			<td><input type="button" value="3"></td>
-			<td><input type="button" value="*"></td>
+			<td><input type="button" value="1" onClick="numeros(this.value);"></td>
+			<td><input type="button" value="2" onClick="numeros(this.value);"></td>
+			<td><input type="button" value="3" onClick="numeros(this.value);"></td>
+			<td><input type="button" value="*" onclick="operadores(this.value)"></td>
 		</tr>
 		<tr>
-			<td><input type="button" value="CE"></td>
-			<td><input type="button" value="0"></td>
-			<td><input type="button" value="="></td>
-			<td><input type="button" value="/"></td>
+			<td><input type="button" value="CE" onclick="operadores(this.value)"></td>
+			<td><input type="button" value="0" onClick="numeros(this.value);"></td>
+			<td><input type="button" value="=" onclick="igual();"></td>
+			<td><input type="button" value="/" onclick="operadores(this.value)"></td>
 		</tr>
 	</table>
 	</form>
