--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -44,7 +44,7 @@
 			<td><input type="button" value="*" onclick="operadores(this.value)"></td>
 		</tr>
 		<tr>
-			<td><input type="button" value="CE" onclick="operadores(this.value)"></td>
+			<td><input type="button" value="CE" onclick="borrar();"></td>
 			<td><input type="button" value="0" onClick="numeros(this.value);"></td>
 			<td><input type="button" value="=" onclick="igual();"></td>
 			<td><input type="button" value="/" onclick="operadores(this.value)"></td>
@@ -53,5 +53,5 @@
 	</form>
 
 
-</body>
+</body> 
 </html>
