--- a/Gato/index.html
+++ b/Gato/index.html
@@ -9,21 +9,21 @@
 <body>
 	<h1>Juego del Gato</h1>
 	<form action="" name="gato">
-	<table> 
+	<table id="div_contenedor"> 
 		<tr >
-			<td><input type="text" onclick="" class="borde1" id="borde2"></td>
-			<td><input type="text" onclick="" class="borde1" id="borde2"></td>
-			<td><input type="text" onclick="" id="borde2"></td>
+			<td><input type="button" name="b1" onclick="actions(this)" class="borde1" id="borde2"></td>
+			<td><input type="button" name="b2"onclick="actions(this)" class="borde1" id="borde2"></td>
+			<td><input type="button" name="b3"onclick="actions(this)" id="borde2"></td>
 		</tr>
 		<tr>
-			<td><input type="text" onclick="" class="borde1" id="borde2"></td>
-			<td><input type="text" onclick="" class="borde1" id="borde2"></td>
-			<td><input type="text" onclick="" id="borde2"></td>
+			<td><input type="button" name="b4"onclick="actions(this)" class="borde1" id="borde2"></td>
+			<td><input type="button" name="b5"onclick="actions(this)" class="borde1" id="borde2"></td>
+			<td><input type="button" name="b6"onclick="actions(this)" id="borde2"></td>
 		</tr>
 		<tr>
-			<td><input type="text" onclick="" class="borde1"></td>
-			<td><input type="text" onclick="" class="borde1"></td>
-			<td><input type="text" onclick="" ></td>
+			<td><input type="button" name="b7"onclick="actions(this)" class="borde1"></td>
+			<td><input type="button" name="b8"onclick="actions(this)" class="borde1"></td>
+			<td><input type="button" name="b8"onclick="actions(this)" ></td>
 		</tr>
 	</table>
 	</form>
