Juego Gato terminado/ PracticaGato empezado

--- a/Gato/index.html
+++ b/Gato/index.html
@@ -2,30 +2,31 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Gato</title>
+	<title>Juego del Gato</title>
 	<link rel="stylesheet" href="css/estilos.css">
-	<script scr="js/gato.js"></script>
+	<script src="js/gato.js"></script>
 </head>
 <body>
-	<h1>Juego del Gato</h1>
-	<form action="" name="gato">
-	<table id="div_contenedor"> 
-		<tr >
-			<td><input type="button" name="b1" onclick="actions(this)" class="borde1" id="borde2"></td>
-			<td><input type="button" name="b2"onclick="actions(this)" class="borde1" id="borde2"></td>
-			<td><input type="button" name="b3"onclick="actions(this)" id="borde2"></td>
-		</tr>
-		<tr>
-			<td><input type="button" name="b4"onclick="actions(this)" class="borde1" id="borde2"></td>
-			<td><input type="button" name="b5"onclick="actions(this)" class="borde1" id="borde2"></td>
-			<td><input type="button" name="b6"onclick="actions(this)" id="borde2"></td>
-		</tr>
-		<tr>
-			<td><input type="button" name="b7"onclick="actions(this)" class="borde1"></td>
-			<td><input type="button" name="b8"onclick="actions(this)" class="borde1"></td>
-			<td><input type="button" name="b8"onclick="actions(this)" ></td>
-		</tr>
-	</table>
+	<h1>Juego del Gato (#)</h1>
+	<form action="">
+		<table>
+			<tr>
+				<td><input type="button" class="botones" id="b11" name="b11"></td>
+				<td><input type="button" class="botones" id="b12" name="b12"></td>
+				<td><input type="button" class="botones" id="b13" name="b13"></td>
+			</tr>
+			<tr>
+				<td><input type="button" class="botones" id="b21" name="b21"></td>
+				<td><input type="button" class="botones" id="b22" name="b22"></td>
+				<td><input type="button" class="botones" id="b23" name="b23"></td>
+			</tr>
+			<tr>
+				<td><input type="button" class="botones" id="b31" name="b31"></td>
+				<td><input type="button" class="botones" id="b32" name="b32"></td>
+				<td><input type="button" class="botones" id="b33" name="b33"></td>
+			</tr>
+		</table>
 	</form>
+	
 </body>
 </html>
