Datos de RandomUser

--- a/jquery/index.html
+++ b/jquery/index.html
@@ -3,15 +3,30 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ejemplo de JQuery</title>
+	<link rel="stylesheet" href="css/estilos.css">
 	<script src="js/jquery-2.2.3.js"></script>
 	<script src="js/eventos.js"></script>
 </head>
 <body>
-	<span class="anuncioWeb"></span>
-	<br>
-	<input type="text" id="unInput">
-	<br>
-	<input type="text" id="otroInput">
-	<button id="miBoton">Mi botón</button>
+	<section id="art01">
+		<h2>Datos de RandomUser</h2>
+		<article id="art02">
+			<article id="foto">
+				<img src="" alt="" id="fotoPersona">
+			<div id="txtNombreUser"></div>
+			<div id="txtApellidoUser"></div>
+			
+			</article>
+			<article id="text">
+				<span class="anuncioWeb"></span>
+				<br>
+				<input type="text" id="unInput">
+				<br>
+				<input type="text" id="otroInput">
+			</article>
+		<!-- <button id="miBoton">Mi botón</button> -->
+		<button id="miBoton">Mi botón</button>
+		</article>
+	</section>
 </body>
 </html>
