Introduccion del Alta

--- a/jquery2/index.html
+++ b/jquery2/index.html
@@ -40,6 +40,21 @@
 				  </article>
 				</article>
 			</article>
+		<section>
+		</section>
+			<article id="altaUsuarios">
+				<h2>Alta de Usuarios</h2>
+				<form action="#" id="frmAltaUsuarios" name="frmAltaUsuarios">
+					<input type="text" class="form-control" id="txtNombreUsuario" name="txtNombreUsuario"placeholder="Usuario"required>
+					<input type="password" class="form-control" id="txtClaveUsuario" name="txtClaveUsuario" placeholder="Clace"required>
+					<select name="txtTipoUsuario" id="txtTipoUsuario"class="form-control">
+						<option value="vigente">Vigente</option>
+						<option value="baja">Baja</option>
+					</select>
+					<input type="text" class="form-control" id="txtDepartamento" name="txtDepartamento" placeholder="Departamento">
+					<input type="submit" id="btnAltaUsuario" name="btnAltaUsuario" class="btn btn-success btn-lg btn-block">
+				</form>
+			</article>
 		</section>
 	</main>
 	<footer></footer>
