AltaUsuarios con error

--- a/jquery2/index.html
+++ b/jquery2/index.html
@@ -15,7 +15,7 @@
 		<nav>
 			<ul>
 				<li><button class="btn btn-primary">Inicio</button></li>
-				<li><button class="btn btn-warning">Altas</button></li>
+				<li><button id="btnAltas"class="btn btn-warning">Altas</button></li>
 				<li><button class="btn btn-danger">Bajas</button></li>
 				<li><button class="btn btn-info">Cambios</button></li>
 				<li><button class="btn btn-success">Consultas</button></li>
